--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,11 @@
         "yiisoft/yii2-bootstrap5": "~2.0.2",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
         "kartik-v/yii2-widgets": "dev-master",
-        "kartik-v/yii2-grid": "@dev"
+        "kartik-v/yii2-grid": "^3.5",
+        "kartik-v/yii2-widget-select2": "dev-master",
+        "mdmsoft/yii2-autonumber": "*",
+        "kartik-v/yii2-bootstrap5-dropdown": "^1.0",
+        "omnilight/yii2-shopping-cart": "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
