--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "kartik-v/yii2-widget-select2": "dev-master",
         "mdmsoft/yii2-autonumber": "*",
         "kartik-v/yii2-bootstrap5-dropdown": "^1.0",
-        "omnilight/yii2-shopping-cart": "~1.0"
+        "omnilight/yii2-shopping-cart": "~1.0",
+        "hail812/yii2-adminlte3": "^1.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
