--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "mdmsoft/yii2-autonumber": "*",
         "kartik-v/yii2-bootstrap5-dropdown": "^1.0",
         "omnilight/yii2-shopping-cart": "~1.0",
-        "hail812/yii2-adminlte3": "^1.1"
+        "hail812/yii2-adminlte3": "^1.1",
+        "kartik-v/yii2-field-range": "^1.3",
+        "miloschuman/yii2-highcharts-widget": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
