--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,9 @@
         "omnilight/yii2-shopping-cart": "~1.0",
         "hail812/yii2-adminlte3": "^1.1",
         "kartik-v/yii2-field-range": "^1.3",
-        "miloschuman/yii2-highcharts-widget": "*"
+        "2amigos/yii2-gallery-widget" : "*",
+        "miloschuman/yii2-highcharts-widget": "*",
+        "yurkinx/yii2-image": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
