--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
         "kartik-v/yii2-field-range": "^1.3",
         "2amigos/yii2-gallery-widget" : "*",
         "miloschuman/yii2-highcharts-widget": "*",
-        "yurkinx/yii2-image": "dev-master",
-        "chillerlan/php-qrcode": "*"
+        "chillerlan/php-qrcode": "*",
+        "yurkinx/yii2-image": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
