--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,12 @@
 {
     "name": "yiisoft/yii2-app-basic",
     "description": "Yii 2 Basic Project Template",
-    "keywords": ["yii2", "framework", "basic", "project template"],
+    "keywords": [
+        "yii2",
+        "framework",
+        "basic",
+        "project template"
+    ],
     "homepage": "https://www.yiiframework.com/",
     "type": "project",
     "license": "BSD-3-Clause",
@@ -26,7 +31,7 @@
         "omnilight/yii2-shopping-cart": "~1.0",
         "hail812/yii2-adminlte3": "^1.1",
         "kartik-v/yii2-field-range": "^1.3",
-        "2amigos/yii2-gallery-widget" : "*",
+        "2amigos/yii2-gallery-widget": "*",
         "miloschuman/yii2-highcharts-widget": "*",
         "chillerlan/php-qrcode": "*",
         "yurkinx/yii2-image": "*",
@@ -48,7 +53,7 @@
     },
     "config": {
         "allow-plugins": {
-            "yiisoft/yii2-composer" : true
+            "yiisoft/yii2-composer": true
         },
         "process-timeout": 1800,
         "fxp-asset": {
@@ -86,5 +91,4 @@
             "url": "https://asset-packagist.org"
         }
     ]
- 
 }
