--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "kartik-v/yii2-widget-select2": "dev-master",
         "mdmsoft/yii2-autonumber": "*",
         "kartik-v/yii2-bootstrap5-dropdown": "^1.0",
+        "kartik-v/yii2-money": "*",
         "omnilight/yii2-shopping-cart": "~1.0",
         "hail812/yii2-adminlte3": "^1.1",
         "kartik-v/yii2-field-range": "^1.3",
