--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,8 @@
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
-        "kartik-v/yii2-widgets": "dev-master",
+        "kartik-v/yii2-widgets": "*",
         "kartik-v/yii2-grid": "^3.5",
-        "kartik-v/yii2-widget-select2": "dev-master",
         "mdmsoft/yii2-autonumber": "*",
         "kartik-v/yii2-bootstrap5-dropdown": "^1.0",
         "kartik-v/yii2-money": "*",
@@ -38,8 +37,7 @@
         "yurkinx/yii2-image": "*",
         "buibr/yii2-datepicker-bs4": "^1.2",
         "unclead/yii2-multiple-input": "^2.1",
-        "yiisoft/yii2-jui": "^2.0",
-        "wbraganca/yii2-dynamicform": "*"
+        "yiisoft/yii2-jui": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -52,7 +50,8 @@
         "codeception/module-yii2": "^1.1",
         "codeception/module-filesystem": "^3.0 || ^2.0 || ^1.1",
         "codeception/verify": "^3.0 || ^2.2",
-        "symfony/browser-kit": "^6.0 || >=2.7 <=4.2.4"
+        "symfony/browser-kit": "^6.0 || >=2.7 <=4.2.4",
+        "wbraganca/yii2-dynamicform": "dev-master"
     },
     "config": {
         "allow-plugins": {
