--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,13 @@
         "yurkinx/yii2-image": "*",
         "buibr/yii2-datepicker-bs4": "^1.2",
         "unclead/yii2-multiple-input": "^2.1",
-        "yiisoft/yii2-jui": "^2.0"
+        "kartik-v/yii2-export": "*",
+        "kartik-v/yii2-icons": "^1.4",
+        "yii2assets/yii2-printthis": "^1.0",
+        "kartik-v/yii2-mpdf": "^1.0",
+        "yii2assets/yii2-pdfjs": ">=1.0",
+        "yiisoft/yii2-jui": "^2.0",
+        "wbraganca/yii2-dynamicform": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -50,8 +56,7 @@
         "codeception/module-yii2": "^1.1",
         "codeception/module-filesystem": "^3.0 || ^2.0 || ^1.1",
         "codeception/verify": "^3.0 || ^2.2",
-        "symfony/browser-kit": "^6.0 || >=2.7 <=4.2.4",
-        "wbraganca/yii2-dynamicform": "dev-master"
+        "symfony/browser-kit": "^6.0 || >=2.7 <=4.2.4"
     },
     "config": {
         "allow-plugins": {
